RESOLVED FIXED160514
Element.insertAdjacent*() should throw a SYNTAX_ERR for invalid "where" parameter
https://bugs.webkit.org/show_bug.cgi?id=160514
Summary Element.insertAdjacent*() should throw a SYNTAX_ERR for invalid "where" param...
Chris Dumez
Reported 2016-08-03 11:39:01 PDT
Element.insertAdjacent*() should throw a SYNTAX_ERR for invalid "where" parameter: - https://dom.spec.whatwg.org/#insert-adjacent We currently throw a NOT_SUPPORTED_ERR.
Attachments
Patch (8.32 KB, patch)
2016-08-03 12:06 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-03 12:06:30 PDT
Chris Dumez
Comment 2 2016-08-04 09:29:39 PDT
Comment on attachment 285259 [details] Patch Clearing flags on attachment: 285259 Committed r204122: <http://trac.webkit.org/changeset/204122>
Chris Dumez
Comment 3 2016-08-04 09:29:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.