Element.insertAdjacent*() should throw a SYNTAX_ERR for invalid "where" parameter https://bugs.webkit.org/show_bug.cgi?id=160514

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline several W3C tests now that more checks are passing.

* web-platform-tests/dom/nodes/Element-insertAdjacentElement-expected.txt:
* web-platform-tests/dom/nodes/Element-insertAdjacentText-expected.txt:
* web-platform-tests/dom/nodes/insert-adjacent-expected.txt:

Source/WebCore:

Element.insertAdjacent*() should throw a SYNTAX_ERR for invalid "where" parameter:
- https://dom.spec.whatwg.org/#insert-adjacent

We were throwing a NOT_SUPPORTED_ERR instead.

No new tests, rebaselined existing tests.

* html/HTMLElement.cpp:
(WebCore::HTMLElement::insertAdjacent):

LayoutTests:

Rebaseline existing test now that a different exception is thrown.

* fast/dynamic/insertAdjacentElement-expected.txt:
* fast/dynamic/insertAdjacentText-expected.txt:

Canonical link: https://commits.webkit.org/178667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204122 268f45cc-cd09-0410-ab3c-d52691b4dbfc